--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.48.0",
+    "axios": "^1.4.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "^13.4.2",
+    "node-fetch": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -23,9 +25,11 @@
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
-    "swr": "^2.1.0"
+    "swr": "^2.1.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
