--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^9.3.2",
     "swr": "^2.1.0",
     "universal-cookie": "^4.0.4"
   },
